﻿This file includes only a short list of the changes between Media Player Classic - BE's versions.

English translation of the change log made by u_shell.

Legend:
+ Added
* Changed
! Fixed

1.4.3 (beta)
==============================

Added (+):

	 ... and many more.


Changes (*):

	 ... and many more.


Fixes (!):
	! VSFilter - fixed incorrect handling of font changes;
	 ... and many more.


1.4.2
==============================

Added (+):
	+ MPCVideoDec - added support for decoding 'VP7';
	 ... and many more.


Changes (*):
	* MPCVideoDec - add support MP4 H264 files with avcC atoms without any SPS/PPS (use code from LAV);
	* MP4Splitter - correct aspect ratio for video tracks, has a higher priority value from the header(atom 'tkhd');
	* After closing the Playlist/Shader Editor/Editor "Synchronize subtitle" - set the focus to the main window;
	* In the property "FileVersion" indicates the version, including SVN revision number;
	* ffmpeg 2.2 git-cecb6d6f;
	* libwebp 0.4.0 git-af444608;
	* MediaInfo 0.7.67+ svn rev.6177;
	 ... and many more.


Fixes (!):
	! Fixed parser .ass subtitles, leading to hang when loading subtitle;
	! OSD is displayed on top of all windows;
	 ... and many more.


1.4.1
==============================

Changes (*):
	* Renumbered versions - now it consists of three digits (MAJOR.MINOR.PATCH);
	* MPCVideoDec - disable DXVA for WMV3 Complex profile;
	* libpng 1.7.0 b35 git-3ac960f1;
	 ... and many more.


Fixes (!):
	! Fixed crash when closing a window settings file associations when called from a UAC;
	! Some menu items are not marked as active;
	! Fixed changing settings interface;
	 ... and many more.


1.4.0.3
==============================

Added (+):
	+ added support for opening *.CUE;
	+ added completely reengineered DXVA2 decoder;
	+ added support for subtitles display for stereoscopic pictures;
	+ AudioSplitter - added support for Monkey's Audio (.APE) and also for APE Tag, DTS-CD and AC3-CD, TTA, WAV and Wave64;